Bug 695860: only shutdown BGPrint if it's active

Always forcing a setpagedevice interacts poorly with pdfwrite/ps2write (which
rely on the device shutting down to trigger emitting the final output).

Since vector devices cannot benefit from BGPrint, only disable BGPrint (with
setpagedevice) if BGPrint was active in the first place.

No cluster differences.